fixed text color bug for dice calculator on mobile

--- a/styles/diceRollerStyle.css
+++ b/styles/diceRollerStyle.css
@@ -1,7 +1,6 @@
 /* Dice Roller Buttons */
 #buttonContainer {
     display: inline-grid;
-    color: black;
     grid-template-columns: repeat(10, 2fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 10px;
@@ -11,6 +10,12 @@
     /* Disable Text Selection (Generic & Safari, respectfully) */
     user-select: none;
     -webkit-user-select: none;
+}
+
+.smallButton,
+.largeButton,
+.equalsButton {
+    color: black;
 }
 
 .smallButton {
